# proxmox-rs

./: .gitignore  Cargo.toml  Makefile  README.md  README.rst  build.sh  bump.sh
api-test/: Cargo.toml  example.sh
api-test/src/: api.rs  lib.rs  main.rs
api-test/src/lxc/: mod.rs
api-test/src/schema/: memory.rs  mod.rs  string_list.rs  string_set.rs  tools.rs
api-test/tests/: lxc-config.rs
api-test/www/: index.html
debian/: control  (+1 more)
pbs-api-types/: Cargo.toml
pbs-api-types/debian/: changelog  control
pbs-api-types/src/: acl.rs  ad.rs  crypto.rs  datastore.rs  file_restore.rs  jobs.rs  key_derivation.rs  ldap.rs  lib.rs  maintenance.rs  metrics.rs  node.rs  openid.rs  pathpatterns.rs  percent_encoding.rs  remote.rs  traffic_control.rs  user.rs  version.rs  zfs.rs
pbs-api-types/src/tape/: changer.rs  device.rs  drive.rs  media.rs  media_location.rs  media_pool.rs  media_status.rs  mod.rs
proxmox-access-control/: Cargo.toml
proxmox-access-control/debian/: changelog  control
proxmox-access-control/src/: acl.rs  api.rs  cached_user_info.rs  init.rs  lib.rs  token_shadow.rs  types.rs  user.rs
proxmox-access-control/src/api/: acl.rs  mod.rs  tokens.rs
proxmox-acme/: Cargo.toml
proxmox-acme-api/: Cargo.toml
proxmox-acme-api/debian/: changelog  control  copyright
proxmox-acme-api/src/: account_api_impl.rs  account_config.rs  acme_plugin.rs  certificate_helpers.rs  challenge_schemas.rs  config.rs  init.rs  lib.rs  plugin_api_impl.rs  plugin_config.rs  types.rs
proxmox-acme/debian/: changelog  control  copyright  debcargo.toml
proxmox-acme/src/: account.rs  async_client.rs  authorization.rs  b64u.rs  client.rs  directory.rs  eab.rs  error.rs  json.rs  jws.rs  key.rs  lib.rs  order.rs  request.rs  types.rs  util.rs
proxmox-api/: Cargo.toml
proxmox-api-macro/: Cargo.toml
proxmox-api-macro/debian/: cargo-checksum.json  changelog  control  copyright
proxmox-api-macro/src/: api.rs  api_def.rs  api_macro.rs  error.rs  lib.rs  parsing.rs  router_macro.rs  serde.rs  types.rs  updater.rs  util.rs
proxmox-api-macro/src/api/: attributes.rs  enums.rs  method.rs  mod.rs  structs.rs
proxmox-api-macro/tests/: allof.rs  api1.rs  api2.rs  basic.rs  ext-schema.rs  int-limits.rs  oneof.rs  options.rs  section-config.rs  types.rs  updater.rs  verification.rs
proxmox-api/debian/: cargo-checksum.json  changelog  control  rules
proxmox-api/src/: api_output.rs  api_type.rs  cli.rs  const_regex.rs  error.rs  format.rs  lib.rs  meta.rs  router.rs  rpc_environment.rs  schema.rs  verify.rs
proxmox-api/tests/: cli.rs  router.rs
proxmox-apt/: Cargo.toml
proxmox-apt-api-types/: Cargo.toml
proxmox-apt-api-types/debian/: changelog  control  debcargo.toml
proxmox-apt-api-types/src/: lib.rs
proxmox-apt/debian/: changelog  control
proxmox-apt/src/: api.rs  cache.rs  cache_api.rs  config.rs  lib.rs
proxmox-apt/tests/: repositories.rs
proxmox-async/: Cargo.toml
proxmox-async/debian/: changelog  control  debcargo.toml
proxmox-async/src/: blocking.rs  broadcast_future.rs  compression.rs  lib.rs  runtime.rs  stream.rs  zip.rs
proxmox-auth-api/: Cargo.toml
proxmox-auth-api/debian/: changelog  control
proxmox-auth-api/examples/: passwd.rs
proxmox-auth-api/src/: auth_key.rs  lib.rs  pam_authenticator.rs  password_authenticator.rs  ticket.rs  time.rs  types.rs
proxmox-base64/: Cargo.toml
proxmox-base64/debian/: changelog  control
proxmox-base64/src/: error.rs  implementation.rs  lib.rs
proxmox-borrow/: Cargo.toml
proxmox-borrow/debian/: changelog  control
proxmox-borrow/src/: lib.rs
proxmox-client/: Cargo.toml
proxmox-client/debian/: changelog  control
proxmox-client/examples/: api-client.rs
proxmox-client/src/: api_path_builder.rs  auth.rs  client.rs  environment.rs  error.rs  lib.rs
proxmox-compression/: Cargo.toml
proxmox-compression/debian/: changelog  control
proxmox-compression/src/: lib.rs  tar.rs  zip.rs  zstd.rs
proxmox-compression/tests/: zip.rs
proxmox-config-digest/: Cargo.toml
proxmox-config-digest/debian/: changelog  control
proxmox-config-digest/src/: lib.rs
proxmox-daemon/: Cargo.toml
proxmox-daemon/debian/: changelog  control
proxmox-daemon/src/: command_socket.rs  lib.rs  server.rs  state.rs
proxmox-deb-version/: Cargo.toml
proxmox-deb-version/debian/: changelog  control  copyright
proxmox-deb-version/src/: lib.rs
proxmox-disks/: Cargo.toml
proxmox-disks/debian/: changelog  control
proxmox-disks/src/: completion.rs  disk.rs  disks.rs  lib.rs  lvm.rs  operations.rs  parse_helpers.rs  scan.rs  smart.rs  types.rs  zfs.rs  zpool_list.rs  zpool_status.rs
proxmox-dns-api/: Cargo.toml
proxmox-dns-api/debian/: changelog  control
proxmox-dns-api/src/: api_types.rs  lib.rs  resolv_conf.rs
proxmox-docgen/: Cargo.toml
proxmox-docgen/debian/: changelog  control
proxmox-docgen/src/: lib.rs
proxmox-fixed-string/: Cargo.toml
proxmox-fixed-string/debian/: changelog  control
proxmox-fixed-string/src/: lib.rs
proxmox-http/: Cargo.toml
proxmox-http-error/: Cargo.toml
proxmox-http-error/debian/: changelog  control
proxmox-http-error/src/: lib.rs
proxmox-http/debian/: changelog  control
proxmox-http/src/: body.rs  client_trait.rs  http_options.rs  lib.rs  proxy_config.rs  rate_limited_stream.rs  tls.rs  uri.rs
proxmox-human-byte/: Cargo.toml
proxmox-human-byte/debian/: changelog  control  copyright
proxmox-human-byte/src/: lib.rs
proxmox-ini/: Cargo.toml
proxmox-ini/debian/: changelog  control  copyright
proxmox-ini/src/: lib.rs
proxmox-installer-types/: Cargo.toml
proxmox-installer-types/debian/: changelog  control
proxmox-installer-types/src/: answer.rs  lib.rs  post_hook.rs
proxmox-installer-types/tests/: answer_parse.rs
proxmox-io/: Cargo.toml
proxmox-io/debian/: changelog  control
proxmox-io/src/: boxed.rs  byte_buffer.rs  lib.rs  range_reader.rs  read.rs  sparse_copy.rs  std_channel_writer.rs  write.rs
proxmox-lang/: Cargo.toml
proxmox-lang/debian/: changelog  control  copyright
proxmox-lang/src/: constnamedbitmap.rs  error.rs  lib.rs  ops.rs
(+711 files in other folders)
