[workspace]
members = [
    "proxmox-access-control",
    "proxmox-acme",
    "proxmox-acme-api",
    "proxmox-api-macro",
    "proxmox-apt",
    "proxmox-apt-api-types",
    "proxmox-async",
    "proxmox-auth-api",
    "proxmox-borrow",
    "proxmox-client",
    "proxmox-compression",
    "proxmox-config-digest",
    "proxmox-daemon",
    "proxmox-dns-api",
    "proxmox-http",
    "proxmox-http-error",
    "proxmox-human-byte",
    "proxmox-io",
    "proxmox-lang",
    "proxmox-ldap",
    "proxmox-log",
    "proxmox-login",
    "proxmox-metrics",
    "proxmox-network-api",
    "proxmox-notify",
    "proxmox-openid",
    "proxmox-product-config",
    "proxmox-rest-server",
    "proxmox-router",
    "proxmox-rrd",
    "proxmox-rrd-api-types",
    "proxmox-schema",
    "proxmox-section-config",
    "proxmox-sendmail",
    "proxmox-serde",
    "proxmox-shared-cache",
    "proxmox-shared-memory",
    "proxmox-simple-config",
    "proxmox-sortable-macro",
    "proxmox-subscription",
    "proxmox-sys",
    "proxmox-syslog-api",
    "proxmox-systemd",
    "proxmox-tfa",
    "proxmox-time",
    "proxmox-time-api",
    "proxmox-uuid",
    "proxmox-worker-task",
    "pbs-api-types",
]
exclude = [
    "build",
]
resolver = "2"

[workspace.package]
authors = ["Proxmox Support Team <support@proxmox.com>"]
edition = "2021"
license = "AGPL-3"
repository = "https://git.proxmox.com/?p=proxmox.git"
homepage = "https://proxmox.com"
exclude = [ "debian" ]
rust-version = "1.82"

[workspace.dependencies]
# any features enabled here are enabled on all members using 'workspace = true'!

# external dependencies
anyhow = "1.0"
base32 = "0.4"
base64 = "0.13"
bitflags = "2.4"
bytes = "1.0"
const_format = "0.2"
crc32fast = "1"
crossbeam-channel = "0.5"
endian_trait = "0.6"
env_logger = "0.11"
flate2 = "1.0"
foreign-types = "0.3"
form_urlencoded = "1.1"
futures = "0.3"
handlebars = "3.0"
hex = "0.4"
http = "0.2"
hyper = "0.14.5"
ldap3 = { version = "0.11", default-features = false }
lettre = "0.11.1"
libc = "0.2.107"
log = "0.4.17"
mail-parser = "0.8.2"
native-tls = "0.2"
nix = "0.26.1"
openssl = "0.10"
pam-sys = "0.5"
percent-encoding = "2.1"
pin-utils = "0.1.0"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.5"
serde = "1.0"
serde_cbor = "0.11.1"
serde_json = "1.0"
serde_plain = "1.0"
syn = { version = "2", features = [ "full", "visit-mut" ] }
tar = "0.4"
tokio = "1.6"
tokio-openssl = "0.6.1"
tokio-stream = "0.1.0"
tower-service = "0.3.0"
tracing = "0.1"
tracing-journald = "0.3.1"
tracing-log = { version = "0.2", default-features = false }
tracing-subscriber = "0.3.16"
url = "2.2"
walkdir = "2"
webauthn-rs = "0.3"
zstd = { version = "0.12", features = [ "bindgen" ] }

# workspace dependencies
proxmox-acme = {  version = "0.5.3", path = "proxmox-acme", default-features = false }
proxmox-api-macro = { version = "1.3.2", path = "proxmox-api-macro" }
proxmox-apt-api-types = { version = "1.0.2", path = "proxmox-apt-api-types" }
proxmox-auth-api = { version = "0.4.0", path = "proxmox-auth-api" }
proxmox-async = { version = "0.4.1", path = "proxmox-async" }
proxmox-compression = { version = "0.2.4", path = "proxmox-compression" }
proxmox-daemon = { version = "0.1.0", path = "proxmox-daemon" }
proxmox-http = { version = "0.9.5", path = "proxmox-http" }
proxmox-http-error = { version = "0.1.0", path = "proxmox-http-error" }
proxmox-human-byte = { version = "0.1.0", path = "proxmox-human-byte" }
proxmox-io = { version = "1.1.0", path = "proxmox-io" }
proxmox-lang = { version = "1.3", path = "proxmox-lang" }
proxmox-log= { version = "0.2.9", path = "proxmox-log" }
proxmox-login = { version = "0.2.0", path = "proxmox-login" }
proxmox-product-config = { version = "0.2.0", path = "proxmox-product-config" }
proxmox-config-digest = { version = "0.1.0", path = "proxmox-config-digest" }
proxmox-rest-server = { version = "0.8.8", path = "proxmox-rest-server" }
proxmox-router = { version = "3.1.1", path = "proxmox-router" }
proxmox-schema = { version = "4.0.0", path = "proxmox-schema" }
proxmox-section-config = { version = "3.0.0", path = "proxmox-section-config" }
proxmox-sendmail = { version = "0.1.0", path = "proxmox-sendmail" }
proxmox-serde = { version = "0.1.1", path = "proxmox-serde", features = [ "serde_json" ] }
proxmox-shared-memory = { version = "0.3.0", path = "proxmox-shared-memory" }
proxmox-sortable-macro = { version = "0.1.3", path = "proxmox-sortable-macro" }
proxmox-sys = { version = "0.6.6", path = "proxmox-sys" }
proxmox-systemd = { version = "0.1.0", path = "proxmox-systemd" }
proxmox-tfa = { version = "5.0.0", path = "proxmox-tfa" }
proxmox-time = { version = "2.1.0", path = "proxmox-time" }
proxmox-uuid = { version = "1.1.0", path = "proxmox-uuid" }
proxmox-worker-task = { version = "0.1.0", path = "proxmox-worker-task" }
