[workspace]
members = [
    "proxmox-access-control",
    "proxmox-acme",
    "proxmox-acme-api",
    "proxmox-api-macro",
    "proxmox-apt",
    "proxmox-apt-api-types",
    "proxmox-async",
    "proxmox-auth-api",
    "proxmox-base64",
    "proxmox-borrow",
    "proxmox-client",
    "proxmox-compression",
    "proxmox-config-digest",
    "proxmox-daemon",
    "proxmox-dns-api",
    "proxmox-http",
    "proxmox-http-error",
    "proxmox-human-byte",
    "proxmox-io",
    "proxmox-lang",
    "proxmox-ldap",
    "proxmox-log",
    "proxmox-login",
    "proxmox-metrics",
    "proxmox-network-api",
    "proxmox-network-types",
    "proxmox-notify",
    "proxmox-openid",
    "proxmox-product-config",
    "proxmox-resource-scheduling",
    "proxmox-rest-server",
    "proxmox-router",
    "proxmox-rrd",
    "proxmox-rrd-api-types",
    "proxmox-s3-client",
    "proxmox-schema",
    "proxmox-section-config",
    "proxmox-sendmail",
    "proxmox-serde",
    "proxmox-shared-cache",
    "proxmox-shared-memory",
    "proxmox-simple-config",
    "proxmox-sortable-macro",
    "proxmox-subscription",
    "proxmox-sys",
    "proxmox-syslog-api",
    "proxmox-systemd",
    "proxmox-tfa",
    "proxmox-time",
    "proxmox-time-api",
    "proxmox-uuid",
    "proxmox-worker-task",
    "pbs-api-types",
]
exclude = [
    "build",
]
resolver = "2"

[workspace.package]
authors = ["Proxmox Support Team <support@proxmox.com>"]
edition = "2021"
license = "AGPL-3"
repository = "https://git.proxmox.com/?p=proxmox.git"
homepage = "https://proxmox.com"
exclude = [ "debian" ]
rust-version = "1.82"

[workspace.dependencies]
# any features enabled here are enabled on all members using 'workspace = true'!

# external dependencies
anyhow = "1.0"
base32 = "0.4"
base64 = "0.22"
bitflags = "2.4"
bytes = "1.0"
const_format = "0.2"
crc32fast = "1"
crossbeam-channel = "0.5"
endian_trait = "0.6"
env_logger = "0.11"
flate2 = "1.0"
foreign-types = "0.3"
form_urlencoded = "1.1"
futures = "0.3"
handlebars = "5"
hex = "0.4"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = "1"
hyper-util = "0.1.12"
iso8601 = "0.6.1"
ldap3 = { version = "0.11", default-features = false }
lettre = "0.11.1"
libc = "0.2.107"
log = "0.4.17"
mail-parser = "0.11"
md5 = "0.7.0"
native-tls = "0.2"
nix = "0.29"
openssl = "0.10"
pam-sys = "0.5"
percent-encoding = "2.1"
pin-utils = "0.1.0"
proc-macro2 = "1.0"
quick-xml = "0.36.1"
quote = "1.0"
regex = "1.5"
serde = "1.0"
serde_cbor = "0.11.1"
serde_json = "1.0"
serde_plain = "1.0"
serde-xml-rs = "0.5"
syn = { version = "2", features = [ "full", "visit-mut" ] }
sync_wrapper = "1"
tar = "0.4"
tokio = "1.6"
tokio-openssl = "0.6.1"
tokio-stream = "0.1.0"
tokio-util = "0.7"
tower-service = "0.3.0"
tracing = "0.1"
tracing-journald = "0.3.1"
tracing-log = { version = "0.2", default-features = false }
tracing-subscriber = "0.3.16"
url = "2.2"
walkdir = "2"
zstd = "0.13"

# workspace dependencies
proxmox-access-control = { version = "0.2.5", path = "proxmox-access-control" }
proxmox-acme = {  version = "1.0.0", path = "proxmox-acme", default-features = false }
proxmox-api-macro = { version = "1.4.1", path = "proxmox-api-macro" }
proxmox-apt-api-types = { version = "2.0.0", path = "proxmox-apt-api-types" }
proxmox-auth-api = { version = "1.0.0", path = "proxmox-auth-api" }
proxmox-async = { version = "0.5.0", path = "proxmox-async" }
proxmox-base64 = {  version = "1.0.0", path = "proxmox-base64" }
proxmox-compression = { version = "1.0.0", path = "proxmox-compression" }
proxmox-daemon = { version = "1.0.0", path = "proxmox-daemon" }
proxmox-http = { version = "1.0.2", path = "proxmox-http" }
proxmox-http-error = { version = "1.0.0", path = "proxmox-http-error" }
proxmox-human-byte = { version = "1.0.0", path = "proxmox-human-byte" }
proxmox-io = { version = "1.2.0", path = "proxmox-io" }
proxmox-lang = { version = "1.5", path = "proxmox-lang" }
proxmox-log = { version = "1.0.0", path = "proxmox-log" }
proxmox-login = { version = "1.0.0", path = "proxmox-login" }
proxmox-network-types = { version = "0.1.0", path = "proxmox-network-types" }
proxmox-product-config = { version = "1.0.0", path = "proxmox-product-config" }
proxmox-config-digest = { version = "1.0.0", path = "proxmox-config-digest" }
proxmox-rest-server = { version = "1.0.0", path = "proxmox-rest-server" }
proxmox-router = { version = "3.2.2", path = "proxmox-router" }
proxmox-s3-client = { version = "1.1.0", path = "proxmox-s3-client" }
proxmox-schema = { version = "4.1.0", path = "proxmox-schema" }
proxmox-section-config = { version = "3.1.0", path = "proxmox-section-config" }
proxmox-sendmail = { version = "1.0.0", path = "proxmox-sendmail" }
proxmox-serde = { version = "1.0.0", path = "proxmox-serde", features = [ "serde_json" ] }
proxmox-shared-memory = { version = "1.0.0", path = "proxmox-shared-memory" }
proxmox-sortable-macro = { version = "0.1.3", path = "proxmox-sortable-macro" }
proxmox-sys = { version = "1.0.0", path = "proxmox-sys" }
proxmox-systemd = { version = "1.0.0", path = "proxmox-systemd" }
proxmox-tfa = { version = "6.0.0", path = "proxmox-tfa" }
proxmox-time = { version = "2.1.0", path = "proxmox-time" }
proxmox-uuid = { version = "1.1.0", path = "proxmox-uuid" }
proxmox-worker-task = { version = "1.0.0", path = "proxmox-worker-task" }

[workspace.dependencies.http_1]
package = "http"
version = "1"
