[package]
name = "api-test"
edition = "2018"
version = "0.1.0"
authors = [
    "Dietmar Maurer <dietmar@proxmox.com>",
    "Wolfgang Bumiller <w.bumiller@proxmox.com>",
]

[dependencies]
bytes = "0.4"
endian_trait = { version = "0.6", features = [ "arrays" ] }
failure = "0.1"
http = "0.1"
hyper = { version = "0.13.0-a.0", git = "https://github.com/hyperium/hyper" }
proxmox = { path = "../proxmox" }
serde_json = "1.0"
tokio = { version = "0.2", git = "https://github.com/tokio-rs/tokio" }
