[package]
name = "proxmox-access-control"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true
rust-version.workspace = true
description = "A collection of utilities to implement access control management."

[dependencies]
anyhow.workspace = true
nix = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }
serde.workspace = true
serde_json = { workspace = true, optional = true }

proxmox-auth-api = { workspace = true, features = [ "api-types" ] }
proxmox-router = { workspace = true, optional = true }
proxmox-schema.workspace = true
proxmox-section-config = { workspace = true, optional = true }
proxmox-product-config = { workspace = true, optional = true }
proxmox-shared-memory = { workspace = true, optional = true }
proxmox-sys = { workspace = true, features = [ "crypt" ], optional = true }
proxmox-time = { workspace = true }

[features]
default = []
impl = [
    "dep:nix",
    "dep:openssl",
    "dep:proxmox-product-config",
    "dep:proxmox-router",
    "dep:proxmox-section-config",
    "dep:proxmox-shared-memory",
    "dep:proxmox-sys",
    "dep:serde_json",
]
