[package]
name = "proxmox-access-control"
description = "A collection of utilities to implement access control management."
version = "1.3.0"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
const_format.workspace = true
nix = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }
regex.workspace = true
hex = { workspace = true, optional = true }
serde.workspace = true
serde_json = { workspace = true, optional = true }
serde_plain.workspace = true

proxmox-auth-api = { workspace = true, features = [ "api-types" ] }
proxmox-config-digest = { workspace = true, optional = true, features = [ "openssl" ] }
proxmox-product-config = { workspace = true, optional = true }
proxmox-router = { workspace = true, optional = true }
proxmox-schema.workspace = true
proxmox-section-config = { workspace = true, optional = true }
proxmox-shared-memory = { workspace = true, optional = true }
proxmox-sys = { workspace = true, features = [ "crypt" ], optional = true }
proxmox-time = { workspace = true }
proxmox-uuid = { workspace = true }

[features]
default = []
acl = [
    "dep:proxmox-section-config",
]
api = [
    "impl",
    "dep:hex",
]
impl = [
    "acl",
    "dep:nix",
    "dep:openssl",
    "dep:proxmox-config-digest",
    "dep:proxmox-product-config",
    "dep:proxmox-router",
    "dep:proxmox-shared-memory",
    "dep:proxmox-sys",
    "dep:serde_json",
]
