[package]
name = "proxmox-acme-api"
version = "0.1.4"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true
description = "ACME API implementation"
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
base64 = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
http = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true, features = ["fs"] }

foreign-types = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }

proxmox-acme = { workspace = true, features = ["api-types"] }
proxmox-config-digest = { workspace = true, optional = true }
proxmox-log = { workspace = true, optional = true }
proxmox-product-config = { workspace = true, optional = true }
proxmox-rest-server = { workspace = true, optional = true }
proxmox-router = { workspace = true, optional = true }
proxmox-schema = { workspace = true, features = ["api-macro", "api-types"] }
proxmox-section-config = { workspace = true, optional = true }
proxmox-serde.workspace = true
proxmox-sys = { workspace = true, optional = true }
proxmox-time = { workspace = true, optional = true }
proxmox-uuid = { workspace = true, optional = true }

[features]
default = []
impl = [
    "dep:base64",
    "dep:foreign-types",
    "dep:futures",
    "dep:hex",
    "dep:http",
    "dep:hyper",
    "dep:libc",
    "dep:openssl",
    "dep:tokio",

    "dep:proxmox-config-digest",
    "dep:proxmox-log",
    "dep:proxmox-product-config",
    "dep:proxmox-rest-server",
    "dep:proxmox-router",
    "dep:proxmox-section-config",
    "dep:proxmox-sys",
    "dep:proxmox-time",
    "dep:proxmox-uuid",

    "proxmox-acme/async-client",
    "proxmox-acme/impl",
    "proxmox-config-digest?/openssl",
]
