[package]
name = "proxmox-acme"
description = "ACME client library"
version = "1.0.0"

exclude = [ "debian" ]

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# For the ACME implementation
openssl = { workspace = true, optional = true }

# For the client
http = { version = "1", optional = true }

proxmox-base64 = { workspace = true, features = [ "serde" ] }
proxmox-schema = { workspace = true, optional = true, features = [ "api-macro" ] }
proxmox-http = { workspace = true, optional = true, features = [ "client" ] }
anyhow = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }

[dependencies.ureq]
optional = true
version = "3.0"
default-features = false
features = [ "native-tls", "gzip" ]

[features]
default = [ "impl" ]
api-types = [ "dep:proxmox-schema" ]
impl = [ "api-types", "dep:openssl" ]
client = [ "impl", "dep:http", "dep:ureq"]
async-client = [ "impl", "dep:http-body-util", "dep:hyper", "dep:proxmox-http", "dep:anyhow", "dep:bytes" ]

[dev-dependencies]
anyhow.workspace = true
