[package]
name = "proxmox-acme"
description = "ACME client library"
version = "0.5.5"

exclude = [ "debian" ]

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# For the ACME implementation
openssl = { workspace = true, optional = true }

# For the client
native-tls = { workspace = true, optional = true }

proxmox-schema = { workspace = true, optional = true, features = [ "api-macro" ] }
proxmox-http = { workspace = true, optional = true, features = [ "client" ] }
anyhow = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }

[dependencies.ureq]
optional = true
version = "2.4"
default-features = false
features = [ "native-tls", "gzip" ]

[features]
default = [ "impl" ]
api-types = [ "dep:proxmox-schema" ]
impl = [ "api-types", "dep:openssl" ]
client = [ "impl", "dep:ureq", "dep:native-tls"]
async-client = [ "impl", "dep:hyper", "dep:proxmox-http", "dep:anyhow", "dep:bytes" ]

[dev-dependencies]
anyhow.workspace = true
