[package]
name = "proxmox-api-macro"
edition.workspace = true
version = "1.0.3"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Proxmox API macro"

exclude.workspace = true

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = [ "extra-traits", "full", "visit-mut" ] }

[dev-dependencies]
futures = "0.3"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

[dev-dependencies.proxmox-schema]
version = "1.0.0"
path = "../proxmox-schema"
features = [ "test-harness", "api-macro" ]

[dev-dependencies.proxmox-router]
version = "1.0.0"
path = "../proxmox-router"
features = [ "test-harness" ]

# [features]
# # Used to quickly filter out the serde derive noise when using `cargo expand` for debugging!
# # Add this in case you need it, but don't commit it (to avoid debcargo picking this up)!
# noserde = []
