[package]
name = "proxmox-api-macro"
edition.workspace = true
version = "1.1.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Proxmox API macro"

exclude.workspace = true

[lib]
proc-macro = true

[dependencies]
anyhow.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true , features = [ "extra-traits" ] }

[dev-dependencies]
futures.workspace = true
serde = { workspace = true, features = [ "derive" ] }
serde_json.workspace = true
proxmox-section-config.workspace = true

[dev-dependencies.proxmox-schema]
workspace = true
features = [ "test-harness", "api-macro" ]

[dev-dependencies.proxmox-router]
workspace = true
features = [ "test-harness" ]

# [features]
# # Used to quickly filter out the serde derive noise when using `cargo expand` for debugging!
# # Add this in case you need it, but don't commit it (to avoid debcargo picking this up)!
# noserde = []
