[package]
name = "proxmox-api-macro"
description = "Proxmox API macro"
version = "1.3.3"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
anyhow.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true , features = [ "extra-traits" ] }

[dev-dependencies]
futures.workspace = true
serde = { workspace = true, features = [ "derive" ] }
serde_json.workspace = true
proxmox-section-config.workspace = true

[dev-dependencies.proxmox-schema]
workspace = true
features = [ "test-harness", "api-macro" ]

[dev-dependencies.proxmox-router]
workspace = true
features = [ "test-harness" ]

# [features]
# # Used to quickly filter out the serde derive noise when using `cargo expand` for debugging!
# # Add this in case you need it, but don't commit it (to avoid debcargo picking this up)!
# noserde = []
