[package]
name = "proxmox-api"
edition = "2018"
version = "0.1.0"
authors = [ "Wolfgang Bumiller <w.bumiller@proxmox.com>" ]

[dependencies]
bytes = "0.4"
failure = "0.1"
futures-preview = "0.3.0-alpha"
http = "0.1"
proxmox-tools = { version = "0.1", path = "../proxmox-tools" }
regex = "1.0"
rustyline = "5.0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
textwrap = "0.11"
url = "1.7"

hyper = { version = "0.13.0-alpha.1", optional = true }

[dev-dependencies]
lazy_static = "1.3"

[features]
default = [ "router", "cli" ]
router = [ "hyper" ]
cli = [ "router", "hyper" ]
