[package]
name = "proxmox-api"
edition = "2018"
version = "0.1.2"
authors = [ "Wolfgang Bumiller <w.bumiller@proxmox.com>" ]
license = "AGPL-3"
description = "Proxmox API library"

exclude = [ "debian" ]

[dependencies]
bytes = "0.5"
failure = "0.1"
futures = "0.3"
http = "0.2"
proxmox-tools = { version = "0.1.1", path = "../proxmox-tools" }
regex = "1.2"
rustyline = "5.0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
textwrap = "0.11"
url = "2.1"

tokio = { version = "0.2", features = [], optional = true }
hyper = { version = "0.13", optional = true }

[dev-dependencies]
lazy_static = "1.4"

[features]
default = [ "router", "cli" ]
router = [ "hyper", "tokio" ]
cli = [ "router", "hyper", "tokio" ]
test-harness = []
