[package]
name = "proxmox-apt-api-types"
description = "APT API type definitions."
version = "2.0.3"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[features]
enum-fallback = ["dep:proxmox-fixed-string"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_plain.workspace = true
proxmox-schema = { workspace = true, features = ["api-macro"] }
proxmox-serde = { workspace = true, features = ["perl"] }
proxmox-config-digest.workspace = true
proxmox-fixed-string = { workspace = true, optional = true }
