[package]
name = "proxmox-apt"
version = "0.11.2"
description = "Proxmox library for APT"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

exclude = ["debian"]

[dependencies]
anyhow.workspace = true
hex.workspace = true
openssl.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

rfc822-like = "0.2.1"

proxmox-apt-api-types.workspace = true
proxmox-config-digest = { workspace = true, features = ["openssl"] }
proxmox-sys.workspace = true

apt-pkg-native = { version = "0.3.2", optional = true }
regex = { workspace = true, optional = true }
nix = { workspace = true, optional = true }
log = { workspace = true, optional = true }
proxmox-schema = { workspace = true, optional = true }

[features]
default = []
cache = [
    "dep:apt-pkg-native",
    "dep:regex",
    "dep:nix",
    "dep:log",
    "dep:proxmox-schema",
]
