[package]
name = "proxmox-async"
description = "Proxmox async/tokio helpers"
version = "0.4.3"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
pin-utils.workspace = true
tokio = { workspace = true, features = [ "net", "rt", "rt-multi-thread", "sync"] }

proxmox-io = { workspace = true, features = [ "tokio" ] }
proxmox-lang.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = [ "macros" ] }
